# mime-to-jmap

./: .gitignore  CMake-WASM.txt  CMake-native.txt  CMakeLists.txt  Makefile  Makefile.old  README.md  byteorder64.h  chartable.c  config.h  gmtoff_tm.c  hash.c  icu_filters.json  index.d.ts  index.js  jmap_api.c  jmap_api.h  jmap_mail.c  jmap_mail.h  jmap_mail_query.h  jmap_util.h  json_support.c  json_support.h  mailbox.h  main.c  mbox_parse.js  mbox_utils.js  message.c  message.h  message_guid.h  msgrecord.h  package-lock.json  package.json  quota.h  run_wasm.js  tsconfig.json  util.c  util.h  xmalloc.c
examples/: extract_attachments.js  process_mbox.js  process_mbox_progressbar.js  read_email.js
jansson/: jansson_config.h  jansson_private.h  jansson_private_config.h  memory.c
lib/: cyrus_type.ts  index.ts  index.web.ts  mbox_utils.ts  wasm_wrap.ts
src/: charset.c  config.h  gmtoff_gmtime.c  gmtoff_tm.c  imapparse.c  imapparse.h  jmap_api.c  jmap_api.h  jmap_mail.c  jmap_mail.h  jmap_mail_query.c  jmap_mail_query.h  jmap_util.c  jmap_util.h  json_support.c  json_support.h  mailbox.c  mailbox.h  main.c  message.c  message.h  message_guid.c  mkgmtime.c  msgrecord.c  msgrecord.h  prot.c  prot.h  times.c  util.c  util.h  xmalloc.c  xmalloc.h  xsha1.c  yuck.cpp
